// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text 1`] = `
<div
  className="document-content"
  id="document-content___MainDocument"
/>
`;

exports[`text 2`] = `
<div
  className="document-content"
  id="document-content___MainDocument"
>
  <h1>
    Page loaded.
  </h1>
</div>
`;
